<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <ImageView
                android:id="@+id/iv_dialog_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_clear_black_24dp"
                android:tint="@color/colorGray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/new_list"
                android:textColor="@color/colorGray"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/upload_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:hint="@string/list_title_hint"
                    android:inputType="textPersonName"
                    android:maxLines="2"
                    android:paddingTop="16dp"
                    android:singleLine="true"
                    android:textColor="@color/colorGray"
                    android:textSize="24sp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/choose_color_hint" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:scrollbars="none"
                android:layout_marginRight="24dp">

                <RadioGroup
                    android:id="@+id/accent_button_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/accent_1"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/radio_accent_1"
                        android:button="@drawable/radio_accent_1"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/accent_2"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/radio_accent_2"
                        android:button="@drawable/radio_accent_2" />

                    <RadioButton
                        android:id="@+id/accent_3"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/radio_accent_3"
                        android:button="@drawable/radio_accent_3" />

                    <RadioButton
                        android:id="@+id/accent_4"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/radio_accent_4"
                        android:button="@drawable/radio_accent_4" />

                    <RadioButton
                        android:id="@+id/accent_5"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/radio_accent_1"
                        android:button="@drawable/radio_accent_1" />

                    <RadioButton
                        android:id="@+id/accent_6"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/radio_accent_1"
                        android:button="@drawable/radio_accent_1" />

                    <RadioButton
                        android:id="@+id/accent_7"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/radio_accent_1"
                        android:button="@drawable/radio_accent_1" />

                    <RadioButton
                        android:id="@+id/accent_8"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/radio_accent_1"
                        android:button="@drawable/radio_accent_1" />
                </RadioGroup>
            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/select_an_icon" />

            <HorizontalScrollView
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/icon_button_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/icon_1"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/radio_icon_1"
                        android:button="@color/icon_overlay"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/icon_3"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="16dp"
                        android:background="@drawable/radio_icon_3"
                        android:button="@color/icon_overlay" />

                    <RadioButton
                        android:id="@+id/icon_8"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="16dp"
                        android:background="@drawable/radio_icon_8"
                        android:button="@color/icon_overlay" />

                    <RadioButton
                        android:id="@+id/icon_5"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="16dp"
                        android:background="@drawable/radio_icon_5"
                        android:button="@color/icon_overlay" />

                    <RadioButton
                        android:id="@+id/icon_4"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="16dp"
                        android:background="@drawable/radio_icon_4"
                        android:button="@color/icon_overlay" />

                    <RadioButton
                        android:id="@+id/icon_2"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="16dp"
                        android:background="@drawable/radio_icon_2"
                        android:button="@color/icon_overlay" />


                    <RadioButton
                        android:id="@+id/icon_6"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="16dp"
                        android:background="@drawable/radio_icon_6"
                        android:button="@color/icon_overlay" />


                    <RadioButton
                        android:id="@+id/icon_7"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="16dp"
                        android:background="@drawable/radio_icon_7"
                        android:button="@color/icon_overlay" />


                </RadioGroup>
            </HorizontalScrollView>
        </LinearLayout>

        <Button
            android:id="@+id/done_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="bottom"
            android:background="@color/colorGray"
            android:padding="0dp"
            android:text="@string/create_list"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

</ScrollView>