<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <ImageView
                android:id="@+id/iv_dialog_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_clear_black_24dp"
                android:tint="@color/colorGray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/new_task"
                android:textColor="@color/colorGray"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:layout_marginBottom="16dp"
                android:textColorHint="@color/colorGray">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/upload_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:hint="@string/add_task_hint"
                    android:maxLines="2"
                    android:inputType="textPersonName"
                    android:paddingTop="16dp"
                    android:singleLine="true"
                    android:textColor="@color/colorGray"
                    android:textColorHint="@color/colorGray"
                    android:textSize="24sp" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="24dp"
                android:alpha="0.8"
                android:layout_marginRight="24dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:layout_width="32dp"
                    app:roundAsCircle="true"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/iv_list_icon"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    tools:text="Work"
                    android:id="@+id/tv_list_title"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:layout_marginStart="24dp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.8"
                android:id="@+id/list_color"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/ic_launcher_round"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    tools:text="Work"
                    android:text="Today"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:layout_marginStart="24dp"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.8"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/done_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:padding="0dp"
            android:layout_gravity="bottom"
            android:background="@color/colorGray"
            android:textColor="@color/colorPrimary"
            android:text="@string/add_task" />
    </LinearLayout>

</ScrollView>